--- a/smalltab.html
+++ b/smalltab.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Small Tab</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/grid.css">
+    <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="styles/search.css">
 </head>
 <body>
     <div id="background-layer"></div>
