UI Polish: Replace Emojis with SVG Icons

--- a/smalltab.html
+++ b/smalltab.html
@@ -13,7 +13,9 @@
     
     <header>
         <h1 data-i18n="welcomeMessage">Welcome Back!</h1>
-        <button id="settings-btn" aria-label="Settings" data-i18n-aria="settingsLabel">⚙️</button>
+        <button id="settings-btn" aria-label="Settings" data-i18n-aria="settingsLabel">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.1a2 2 0 0 1-1-1.74v-.47a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+        </button>
     </header>
 
     <div id="search-container">
@@ -24,14 +26,18 @@
                 <option value="baidu">Baidu</option>
             </select>
             <input type="text" id="search-input" data-i18n-placeholder="searchPlaceholder" autocomplete="off">
-            <button type="submit" id="search-btn" data-i18n-aria="searchLabel">🔍</button>
+            <button type="submit" id="search-btn" data-i18n-aria="searchLabel">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+            </button>
         </form>
     </div>
 
     <main id="quick-access-grid">
         <!-- Shortcuts will be injected here -->
         <div class="shortcut-item add-button" id="add-shortcut-btn">
-            <div class="icon-placeholder">+</div>
+            <div class="icon-placeholder">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+            </div>
             <div class="shortcut-title" data-i18n="addShortcut">Add</div>
         </div>
     </main>
