--- a/smalltab.html
+++ b/smalltab.html
@@ -20,11 +20,17 @@
 
     <div id="search-container">
         <form id="search-form">
-            <select id="search-engine-select" aria-label="Select Search Engine">
-                <option value="google">Google</option>
-                <option value="bing">Bing</option>
-                <option value="baidu">Baidu</option>
-            </select>
+            <div id="search-engine-dropdown" class="custom-select">
+                <div class="selected-option" tabindex="0">
+                    <span id="current-engine-label">Google</span>
+                    <svg class="chevron-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+                </div>
+                <div class="options-container hidden">
+                    <div class="option-item" data-value="google">Google</div>
+                    <div class="option-item" data-value="bing">Bing</div>
+                    <div class="option-item" data-value="baidu">Baidu</div>
+                </div>
+            </div>
             <input type="text" id="search-input" data-i18n-placeholder="searchPlaceholder" autocomplete="off">
             <button type="submit" id="search-btn" data-i18n-aria="searchLabel">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
