UI Polish: Beautify File Upload Button

--- a/smalltab.html
+++ b/smalltab.html
@@ -80,8 +80,14 @@
                 <input type="url" id="bg-url" placeholder="https://source.unsplash.com/random/1920x1080">
             </div>
             <div class="form-group">
-                <label for="bg-upload" data-i18n="bgUploadLabel">Or Upload Local Image</label>
-                <input type="file" id="bg-upload" accept="image/*">
+                <label class="file-upload-label" data-i18n="bgUploadLabel">Or Upload Local Image</label>
+                <div class="file-upload-wrapper">
+                    <label for="bg-upload" class="custom-file-upload">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg>
+                        <span data-i18n="browseBtn">Browse...</span>
+                    </label>
+                    <input type="file" id="bg-upload" accept="image/*">
+                </div>
             </div>
             <div class="modal-actions">
                 <button id="close-settings" class="btn-primary" data-i18n="doneBtn">Done</button>
