--- a/smalltab.html
+++ b/smalltab.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/modal.css">
     <link rel="stylesheet" href="styles/search.css">
+    <link rel="stylesheet" href="styles/clock.css">
 </head>
 <body>
     <div id="background-layer"></div>
     
     <header>
-        <h1 data-i18n="welcomeMessage">Welcome Back!</h1>
+        <div class="header-spacer"></div>
         <button id="settings-btn" aria-label="Settings" data-i18n-aria="settingsLabel">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.1a2 2 0 0 1-1-1.74v-.47a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"></path><circle cx="12" cy="12" r="3"></circle></svg>
         </button>
     </header>
+
+    <div id="clock-container">
+        <h1 id="time-display"></h1>
+        <h2 id="greeting-display"></h2>
+    </div>
 
     <div id="search-container">
         <form id="search-form">
@@ -86,9 +92,19 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg>
                         <span data-i18n="browseBtn">Browse...</span>
                     </label>
-                    <input type="file" id="bg-upload" accept="image/*">
+                    <input type="file" id="bg-upload" accept="image/*" >
                 </div>
             </div>
+
+            <hr style="border: 0; border-top: 1px solid #eee; margin: 20px 0;">
+            
+            <h3 data-i18n="dataManagementTitle" style="margin-top: 0; font-size: 1rem; color: #333;">Data Management</h3>
+            <div class="form-group" style="display: flex; gap: 10px;">
+                <button id="export-btn" class="btn-secondary" style="flex: 1;" data-i18n="exportBtn">Export Data</button>
+                <button id="import-trigger-btn" class="btn-secondary" style="flex: 1;" data-i18n="importBtn">Import Data</button>
+                <input type="file" id="import-file" accept=".json" style="display: none;">
+            </div>
+
             <div class="modal-actions">
                 <button id="close-settings" class="btn-primary" data-i18n="doneBtn">Done</button>
             </div>
