--- a/smalltab.html
+++ b/smalltab.html
@@ -97,6 +97,24 @@
             </div>
 
             <hr style="border: 0; border-top: 1px solid #eee; margin: 20px 0;">
+
+            <h3 data-i18n="appearanceTitle" style="margin-top: 0; font-size: 1rem; color: #333;">Appearance</h3>
+            <div class="form-group">
+                <label for="clock-size-slider" data-i18n="clockSizeLabel">Clock Size</label>
+                <div style="display: flex; align-items: center; gap: 10px;">
+                    <input type="range" id="clock-size-slider" min="0.5" max="2.0" step="0.1" value="1.0" style="flex: 1;">
+                    <span id="clock-size-value" style="color: #333; min-width: 30px;">1.0x</span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="card-size-slider" data-i18n="cardSizeLabel">Card Size</label>
+                <div style="display: flex; align-items: center; gap: 10px;">
+                    <input type="range" id="card-size-slider" min="0.5" max="2.0" step="0.1" value="1.0" style="flex: 1;">
+                    <span id="card-size-value" style="color: #333; min-width: 30px;">1.0x</span>
+                </div>
+            </div>
+            
+            <hr style="border: 0; border-top: 1px solid #eee; margin: 20px 0;">
             
             <h3 data-i18n="dataManagementTitle" style="margin-top: 0; font-size: 1rem; color: #333;">Data Management</h3>
             <div class="form-group" style="display: flex; gap: 10px;">
